# ensaio

./: .coveragerc  .gitignore  AUTHORS.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  changes.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  pypi.yml  style.yml  test.yml
dev/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  versions.html
dev/_modules/: index.html
dev/_sources/: changes.rst  changes.rst.txt  index.rst  install.rst  install.rst.txt  sg_execution_times.rst  versions.rst.txt
dev/api/: index.html
dev/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  bushveld-gravity.html  caribbean-bathymetry.html  earth-geoid.html  earth-gravity.html  earth-topography.html  index.html  lightning-creek-magnetic.html  morroco_speleothem_qdm.html  osborne-magnetic.html  sg_execution_times.html  sierra-negra-topography.html  southern-africa-gravity.html  southern-africa-topography.html
dev/tutorial/: developers.html  index.html  sg_execution_times.html  using.html
doc/: Makefile  about.rst  changes.rst  citing.rst  compatibility.rst  conf.py  index.rst  install.rst  versions.rst
doc/_static/: style.css
doc/api/: index.rst
doc/gallery_src/: README.txt  britain-magnetic.py  british-columbia-lidar.py  bushveld-gravity.py  caribbean-bathymetry.py  earth-geoid.py  lightning-creek-magnetic.py  morroco_speleothem_qdm.py  osborne-magnetic.py  southern-africa-gravity.py  southern-africa-topography.py
doc/tutorial_src/: README.txt  developers.py  using.py
ensaio/: __init__.py  _fetchers.py  _utils.py  _version.py  v1.py
ensaio/tests/: __init__.py  test_fetchers.py  test_utils.py  test_v1.py
env/: requirements-docs.txt  requirements-style.txt  requirements-test.txt
src/ensaio/: _version.py
test/: test_fetchers.py
tools/: export_requirements.py  license_notice.py  oldest_requirements.py
v0.1.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
v0.1.0/_modules/: index.html
v0.1.0/_sources/: compatibility.rst.txt  index.rst.txt
v0.1.0/_static/: style.css
v0.1.0/api/: index.html
v0.1.0/tutorial/: developers.html  index.html  sg_execution_times.html  using.html
v0.2.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
v0.2.0/_modules/: index.html
v0.2.0/_sources/: index.rst.txt  versions.rst.txt
v0.2.0/api/: index.html
v0.2.0/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  caribbean-bathymetry.html  earth-geoid.html  earth-gravity.html  earth-topography.html  index.html  sg_execution_times.html  southern-africa-gravity.html
v0.2.0/tutorial/: developers.html  index.html  sg_execution_times.html  using.html
v0.3.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
v0.3.0/_modules/: index.html
v0.3.0/_sources/: changes.rst.txt  compatibility.rst.txt  versions.rst.txt
v0.3.0/api/: index.html
v0.3.0/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  caribbean-bathymetry.html  earth-geoid.html  earth-gravity.html  earth-topography.html  index.html  osborne-magnetic.html  sg_execution_times.html  sierra-negra-topography.html  southern-africa-gravity.html
v0.3.0/tutorial/: developers.html  index.html  sg_execution_times.html  using.html
v0.4.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
v0.4.0/_modules/: index.html
v0.4.0/_sources/: changes.rst.txt  index.rst.txt
v0.4.0/api/: index.html
v0.4.0/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  bushveld-gravity.html  caribbean-bathymetry.html  earth-geoid.html  earth-gravity.html  earth-topography.html  index.html  osborne-magnetic.html  sg_execution_times.html  sierra-negra-topography.html  southern-africa-gravity.html  southern-africa-topography.html
v0.4.0/tutorial/: developers.html  using.html
v0.5.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
v0.5.0/_modules/: index.html
v0.5.0/_sources/: compatibility.rst.txt
v0.5.0/_static/: style.css
v0.5.0/api/: index.html
v0.5.0/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  bushveld-gravity.html  caribbean-bathymetry.html  earth-geoid.html  earth-gravity.html  earth-topography.html  index.html  lightning-creek-magnetic.html  osborne-magnetic.html  sg_execution_times.html  sierra-negra-topography.html  southern-africa-gravity.html  southern-africa-topography.html
v0.5.0/tutorial/: developers.html  using.html
v0.6.0/: .buildinfo  changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  versions.html
v0.6.0/_modules/: index.html
v0.6.0/_sources/: index.rst  sg_execution_times.rst
v0.6.0/api/: index.html
v0.6.0/gallery/: alps-gps-velocity.html  britain-magnetic.html  british-columbia-lidar.html  bushveld-gravity.html  caribbean-bathymetry.html  earth-geoid.html  (+9 more)
v0.7.0/: changes.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  versions.html
v0.7.1/: changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  versions.html
(+348 files in other folders)
