[project]
name = "ensaio"
description = "Practice datasets to probe your code"
dynamic = ["version"]
authors = [
  {name="The Ensaio Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["geophysics", "geodesy", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "pooch>=1.5.0,<2.0.0",
]

[project.urls]
"Documentation" = "https://www.fatiando.org/ensaio"
"Changelog" = "https://www.fatiando.org/ensaio/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/ensaio/issues"
"Source Code" = "https://github.com/fatiando/ensaio"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "src/ensaio/_version_generated.py"

[tool.burocrata]
notice = '''
# Copyright (c) 2021 The Ensaio Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "doc/gallery/",
    "src/ensaio/_version_generated.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "D",        # pydocstyle
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # numPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "ISC001",   # Conflicts with formatter
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",   # Allow variable assignment only for return
  "PT001",    # Conventions for parenthesis on pytest.fixture
  "D200",     # Allow single line docstrings in their own line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Disable unused-imports errors on __init__.py
"test/**" = [
    "T20", # Allow print statements in tests
    "D",   # Ignore pydocstyle warnings in tests
]
"doc/gallery_src/**" = [
    "B018",  # Allow "useless expression" for Jupyter rich display
    "T201",  # Allow print calls
    "D400",  # Allow first lines to not have periods
    "D205",  # Don't require blank lines beneath summary lines
]
"doc/conf.py" = ["D"]  # Ignore pydocstyle warnings in Sphinx config

[tool.ruff.lint.pydocstyle]
convention = "numpy"
