[metadata]
name = ensaio
fullname = Ensaio
description = "Practice datasets to probe your code"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The Ensaio Developers
author_email = fatiandoaterra@protonmail.com
maintainer = "Leonardo Uieda"
maintainer_email = leouieda@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.txt
platform = any
keywords = geophysics, geodesy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD 3-Clause License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/fatiando/ensaio
project_urls =
    Documentation = https://www.fatiando.org/ensaio
    Release Notes = https://github.com/fatiando/ensaio/releases
    Bug Tracker = https://github.com/fatiando/ensaio/issues
    Source Code = https://github.com/fatiando/ensaio

[options]
zip_safe = True
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    pooch>=1.5.0

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
